HW 2-2-7 is done here